Added some responsiveness to the project sevtion and added some parallax background separator for the website

--- a/index.html
+++ b/index.html
@@ -344,7 +344,9 @@
         </section>
         <!-- End of Education Section -->
 
-        <!-- Projects Section -->
+        <!-- Parallax Separator -->
+        <div class="parallax-separator"></div>
+
         <!-- Projects Section -->
         <section id="projects" class="py-5">
             <hr class="section-divider"> <!-- Section Divider -->
@@ -418,7 +420,7 @@
                                         <img src="img/4th-Year-Project-1.jpg" class="card-img-top"
                                             alt="Gaming Dashboard Overview">
                                         <div class="card-body text-center">
-                                            <h5 class="card-title">Gaming Dashboard Overview</h5>
+                                            <h5 class="card-title">Gaming Dashboard</h5>
                                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                                 data-bs-target="#projectModal4">
                                                 Show More
@@ -434,6 +436,19 @@
                                             <h5 class="card-title">Performance Optimization</h5>
                                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                                 data-bs-target="#projectModal5">
+                                                Show More
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card">
+                                        <img src="img/Gaming-Library.jpg" class="card-img-top"
+                                            alt="Performance Optimization">
+                                        <div class="card-body text-center">
+                                            <h5 class="card-title">Gaming Library</h5>
+                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                                data-bs-target="#projectModal6">
                                                 Show More
                                             </button>
                                         </div>
@@ -572,13 +587,14 @@
                     </div>
                     <div class="modal-body">
                         <p class="card-text text-dark">
-                            This project, part of my 4th-year portfolio, A comprehensive gaming
+                            This Feature for my 4th year project is part of my 4th-year project portfolio, A
+                            comprehensive gaming
                             dashboard for Steam users that combines game optimization,
                             game management, community interaction, and analytics. This platform serves as a
                             central hub for managing the gaming experience, including game recommendations,
                             performance monitoring, price tracking, and community engagement.
                             <br> <br>
-                            The Project is still in development and will be updated soon.
+                            This Feature for my 4th year project is still in development and will be updated soon.
                         </p>
                         <p>
                             <span class="badge bg-info text-dark">Node.js</span>
@@ -609,11 +625,51 @@
                     </div>
                     <div class="modal-body">
                         <p class="card-text text-dark">
-                            This project, part of my 4th-year portfolio, focuses on enhancing the gaming experience by 
-                            leveraging system performance data to provide optimization recommendations. By using PowerShell 
-                            scripts, the application collects hardware specifications, including CPU, GPU, RAM, and storage.
+                            This Feature for my 4th year project is part of my 4th-year project portfolio, focuses on
+                            enhancing the gaming experience by
+                            leveraging system performance data to provide optimization recommendations. By using
+                            PowerShell
+                            scripts, the application collects hardware specifications, including CPU, GPU, RAM, and
+                            storage.
                             <br> <br>
-                            The Project is still in development and will be updated soon.
+                            This Feature for my 4th year project is still in development and will be updated soon.
+                        </p>
+                        <p>
+                            <span class="badge bg-info text-dark">Node.js</span>
+                            <span class="badge bg-primary">React.js</span>
+                            <span class="badge bg-info text-dark">CSS</span>
+                            <span class="badge bg-danger">HTML</span>
+                            <span class="badge bg-dark">PowerShell</span>
+                            <span class="badge bg-warning">Supabase</span>
+                            <span class="badge bg-success">In Development</span>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal for Gaming library -->
+        <div class="modal fade" id="projectModal6" tabindex="-1" aria-labelledby="projectModal6Label"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="projectModal6Label">Gaming Library</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="card-text text-dark">
+                            This Feature for my 4th year project is part of my 4th-year project portfolio, is a gaming
+                            library dashboard that fetches
+                            and displays the user's Steam game collection. By integrating SteamOpenID for authentication
+                            and using the Steam API, the dashboard retrieves detailed information about the user's
+                            games,
+                            including playtime, achievements, and game metadata.
+                            <br> <br>
+                            This Feature for my 4th year project is still in development and will be updated soon.
                         </p>
                         <p>
                             <span class="badge bg-info text-dark">Node.js</span>
@@ -632,6 +688,9 @@
             </div>
         </div>
         <!-- End of Projects Section -->
+
+         <!-- Parallax Separator -->
+         <div class="parallax-separator"></div>
 
         <!-- Education and Work Experience Section -->
         <section id="education-experience" class="py-5">
