--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     </nav>
     <!-- End of Navbar Section -->
 
-
     <!-- Contact Modal -->
     <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
@@ -352,7 +351,7 @@
             <hr class="section-divider"> <!-- Section Divider -->
 
             <div class="container">
-                <h2 class="fw-bold text-center text-primary mb-4">Projects</h2>
+                <h2 class="fw-bold text-center text-primary mb-4 scroll-element">Projects</h2>
                 <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
                     <!-- Carousel Indicators -->
                     <div class="carousel-indicators">
@@ -371,7 +370,7 @@
                         <!-- Slide 1 -->
                         <div class="carousel-item active">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-4 scroll-element">
                                     <div class="card">
                                         <img src="img/2nd-YearProject-1.jpg" class="card-img-top"
                                             alt="Bike Rental System">
@@ -384,7 +383,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 scroll-element">
                                     <div class="card">
                                         <img src="img/JAVA-text-base-RPG-1.jpg" class="card-img-top"
                                             alt="Java Text-Based RPG">
@@ -397,7 +396,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 scroll-element">
                                     <div class="card">
                                         <img src="img/First-Year-Project.jpg" class="card-img-top"
                                             alt="First Year Web Development Project">
@@ -415,7 +414,7 @@
                         <!-- Slide 2 -->
                         <div class="carousel-item">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-4 scroll-element">
                                     <div class="card">
                                         <img src="img/4th-Year-Project-1.jpg" class="card-img-top"
                                             alt="Gaming Dashboard Overview">
@@ -428,7 +427,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 scroll-element">
                                     <div class="card">
                                         <img src="img/Game-Performance-Monitor-1.jpg" class="card-img-top"
                                             alt="Performance Optimization">
@@ -441,7 +440,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 scroll-element">
                                     <div class="card">
                                         <img src="img/Gaming-Library.jpg" class="card-img-top"
                                             alt="Performance Optimization">
@@ -821,6 +820,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
+    <script src="js/scroll-animation.js"></script>
     <script src="js/script.js"></script>
 
     <!-- Custom JavaScript for Navbar Burger Toggle -->
