--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/aboutme.css">
+    <link rel="stylesheet" href="css/skills.css">
+    <link rel="stylesheet" href="css/grades.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/work.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 
@@ -45,7 +53,7 @@
     </nav>
     <!-- End of Navbar Section -->
 
-    <!-- Contact Modal -->
+    <!-- Navbar Contact Modal -->
     <div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -79,7 +87,7 @@
             </div>
         </div>
     </div>
-    <!-- End of Contact Modal -->
+    <!-- End of Navbar Contact Modal -->
 
     <!-- Hero Section -->
     <header id="hero" class="d-flex align-items-center"
@@ -688,8 +696,8 @@
         </div>
         <!-- End of Projects Section -->
 
-         <!-- Parallax Separator -->
-         <div class="parallax-separator"></div>
+        <!-- Parallax Separator -->
+        <div class="parallax-separator"></div>
 
         <!-- Education and Work Experience Section -->
         <section id="education-experience" class="py-5">
