Changed my about Me section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- Navbar -->
-    <div class="p-3 bg-dark text-white">
+    <div class="navbarMain">
         <div class="flexMain">
             <div class="flex1">
 
@@ -46,7 +46,7 @@
                             class="fas fa-bars me-2"></i> MENU</button>
                 </div>
                 <div class="flex3 text-center" id="siteBrand">
-                     Ricardo Danganan Jnr
+                    Ricardo Danganan Jnr
                 </div>
 
                 <div class="flex2 text-end d-block d-md-none">
@@ -54,7 +54,8 @@
                 </div>
 
                 <div class="flex2 text-end d-none d-md-block">
-                    <button class="blackLink siteLink"class="btn-contact" data-bs-toggle="modal" data-bs-target="#contactModal">CONTACT ME</button>
+                    <button class="blackLink siteLink" class="btn-contact" data-bs-toggle="modal"
+                        data-bs-target="#contactModal">CONTACT ME</button>
                 </div>
             </div>
         </div>
@@ -72,7 +73,8 @@
                 <a href="#about" class="nav-menu-item"><i class="fas fa-home me-3"></i>About Me</a>
                 <a href="#skills" class="nav-menu-item"><i class="fab fa-product-hunt me-3"></i>Skills</a>
                 <a href="#projects" class="nav-menu-item"><i class="fas fa-search me-3"></i>My Projects</a>
-                <a href="#education-experience" class="nav-menu-item"><i class="fas fa-wrench me-3"></i>Work Experience</a>
+                <a href="#education-experience" class="nav-menu-item"><i class="fas fa-wrench me-3"></i>Work
+                    Experience</a>
             </div>
         </div>
     </div>
@@ -129,43 +131,48 @@
     </header>
     <!-- End of Hero Section -->
 
+    <!-- Parallax Separator -->
+    <div class="parallax-separator"></div>
+
     <!-- About Me Section -->
-    <section id="about" class="py-5">
-        <div class="container d-flex align-items-center">
-            <div class="about-text">
-                <h2 class="fw-bold text-primary">About Me</h2>
-                <p>
-                    I am a passionate and driven computing student specializing in web design, database
-                    management, scripting, cloud computing, and networking. My commitment to continuous learning
-                    fuels my
-                    ability to adapt in the ever-evolving ICT landscape. With strong teamwork, communication skills,
-                    and
-                    a willingness to learn, I aim to contribute effectively to professional environments while
-                    growing as
-                    a developer.
-                </p>
-                <p>
-                    Beyond academics, I embrace a disciplined and active lifestyle. Whether it's playing video games
-                    to
-                    fuel creativity or staying committed to fitness through regular gym workouts, boxing, and
-                    jogging, I
-                    demonstrate dedication, perseverance, and balance in all aspects of life.
-                </p>
-                <br><br><br><br><br>
-                <!-- GitHub Button -->
-                <a href="https://github.com/ricardodanganan" target="_blank" class="btn-github">
+    <section id="about" class="py-7">
+        <div>
+            <img src="img/Personal-Image-1.jpg" alt="Profile Picture" class="about-img">
+            <div class="about-socials">
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-youtube"></i></a>
+            </div>
+        </div>
+        <div class="about-text">
+            <p>
+                I am a passionate and driven computing student specializing in web design, database
+                management, scripting, cloud computing, and networking. My commitment to continuous learning
+                fuels my ability to adapt in the ever-evolving ICT landscape. With strong teamwork, communication
+                skills,
+                and a willingness to learn, I aim to contribute effectively to professional environments while
+                growing as a developer.
+            </p>
+            <p>
+                Beyond academics, I embrace a disciplined and active lifestyle. Whether it's playing video games
+                to fuel creativity or staying committed to fitness through regular gym workouts, boxing, and jogging, I
+                demonstrate dedication, perseverance, and balance in all aspects of life.
+            </p>
+            <div class="about-buttons">
+                <a href="https://github.com/ricardodanganan" target="_blank" class="github">
                     <i class="bi bi-github"></i> GitHub
                 </a>
-                <!-- LinkedIn Button -->
-                <a href="https://linkedin.com/in/ricardo-danganan-jnr" target="_blank" class="btn-linkedin">
+                <a href="https://linkedin.com/in/ricardo-danganan-jnr" target="_blank" class="linkedin">
                     <i class="bi bi-linkedin"></i> LinkedIn
                 </a>
-                <a href="#" class="btn btn-primary">Download my CV</a>
+                <a href="#" class="cv">Download My CV</a>
             </div>
-            <img src="img/Profile-logo.jpg" alt="Profile Picture" class="about-img">
         </div>
     </section>
     <!-- End of About Me Section -->
+
+    <!-- Parallax Separator -->
+    <div class="parallax-separator"></div>
 
     <!-- Skills Section -->
     <section class="py-5" id="skills">
