Fixed the type in about me section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="about-text scroll-element">
             <p>
                 I am a motivated computing student currently pursuing a degree in Computing with
-                IT echnology Management at TUD. With a strong foundation in
+                Information Technology Management at Technological University Dublin. With a strong foundation in
                 web design, database management, networking, cloud computing and scripting, I excel at tackling
                 technical challenges
                 and adapting to the ever-evolving ICT landscape.
